force-app/main/default/objects/Employee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>