force-app/main/default/objects/Employee__c/fields/Secondary_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Skill_Set__c</fullName>
    <label>Secondary Skill Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>Advanced Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Salesforce LWC</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>