force-app/main/default/objects/Employee__c/validationRules/Email_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Field</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email Should not Empty or Invalid Format</errorMessage>
</ValidationRule>