force-app/main/default/objects/Employee__c/validationRules/Employee_Phone_and_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Phone_and_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)&amp;&amp;ISBLANK(Phone__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>At least Phone or Email should be filled out</errorMessage>
</ValidationRule>