force-app/main/default/objects/Employee__c/validationRules/Hours_Worked.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Worked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Hours__c  &lt; 0, True, False)</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Hours Worked should not be negative</errorMessage>
</ValidationRule>