force-app/main/default/objects/Employee__c/validationRules/Salary_increase.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_increase</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Salary__c) &gt;  Salary__c</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Salary can not be decreased</errorMessage>
</ValidationRule>