force-app/main/default/objects/Employee__c/validationRules/Salary_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c  &lt; 0 ||  Salary__c  &gt; 80000</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Salary cannot be negative and should not exceed 80000 Rs</errorMessage>
</ValidationRule>